syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (OrderCreateRequest) returns (Order) {}
  rpc GetOrder (OrderById) returns (Order) {}
  rpc ListOrders (Empty) returns (OrderList) {}
  rpc UpdateOrder (OrderUpdateRequest) returns (Order) {}
  rpc DeleteOrder (OrderById) returns (DeleteResponse) {}
}

message OrderById {
  int32 id = 1;
}

message OrderCreateRequest {
  int32 productId = 1;
  int32 quantity = 2;
}

message OrderUpdateRequest {
  int32 id = 1;
  int32 productId = 2;
  int32 quantity = 3;
  string status = 4;
}

message Order {
  int32 id = 1;
  int32 productId = 2;
  int32 quantity = 3;
  double total = 4;
  string status = 5;
}

message OrderList {
  repeated Order items = 1;
}

message DeleteResponse {
  bool success = 1;
}

message Empty {}
